--- a/SampleSource2020/Screens/Top/Top.storyboard
+++ b/SampleSource2020/Screens/Top/Top.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ywd-Pv-Ski">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ywd-Pv-Ski">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -93,6 +93,7 @@
                         <segue destination="37r-9n-w6A" kind="show" identifier="AboutDictionary" id="DGx-9n-omd"/>
                         <segue destination="f3m-TW-q1Z" kind="show" identifier="Renshu3" id="Gtd-fw-jnw"/>
                         <segue destination="mgA-Zk-64z" kind="show" identifier="Magazines" id="e8b-z8-Kdm"/>
+                        <segue destination="7CD-Bm-sCG" kind="show" identifier="Magazines2" id="Rej-g3-sH1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uiy-kL-m7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -226,6 +227,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wYd-US-Fdm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-81" y="157"/>
+        </scene>
+        <!--Magazines2-->
+        <scene sceneID="5Vs-cA-eoB">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Magazines2" id="7CD-Bm-sCG" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="7yY-94-0ib"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hmw-HM-pzc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-91" y="200"/>
         </scene>
     </scenes>
 </document>
