--- a/SampleSource2020/Screens/AboutSegue/AboutSegue.storyboard
+++ b/SampleSource2020/Screens/AboutSegue/AboutSegue.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jWk-SV-Ol8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jWk-SV-Ol8">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -67,7 +67,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sxf-Lb-weE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="938" y="-214"/>
+            <point key="canvasLocation" x="932" y="-281"/>
         </scene>
         <!--About Segue Next View Controller-->
         <scene sceneID="LcK-hC-3mE">
@@ -108,13 +108,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QKR-ot-hBj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1781" y="-281"/>
+            <point key="canvasLocation" x="1732" y="-327"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="4M9-CA-rdL"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="kilua" width="334" height="334"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="355-uT-COS"/>
+    </inferredMetricsTieBreakers>
 </document>
