--- a/SampleSource2020/Screens/AboutSegueRyodan/Ryodan.storyboard
+++ b/SampleSource2020/Screens/AboutSegueRyodan/Ryodan.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2d7-pR-XDl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2d7-pR-XDl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,13 +25,13 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kumo" translatesAutoresizingMaskIntoConstraints="NO" id="gKi-Vw-ggg">
-                                        <rect key="frame" x="0.0" y="202" width="414" height="414"/>
+                                        <rect key="frame" x="0.0" y="210" width="414" height="414"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="gKi-Vw-ggg" secondAttribute="height" multiplier="200:200" id="pKd-Bl-KPH"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Pm-9q-DuP">
-                                        <rect key="frame" x="12" y="435" width="70" height="25"/>
+                                        <rect key="frame" x="12" y="445" width="70" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="2Qu-ib-BvN"/>
                                             <constraint firstAttribute="height" constant="25" id="SX9-fA-v5i"/>
@@ -52,18 +52,18 @@
                                             <action selector="tappedButton10:" destination="2d7-pR-XDl" eventType="touchUpInside" id="uER-zs-IHC"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0R-Hv-ezw">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0R-Hv-ezw">
                                         <rect key="frame" x="170" y="310" width="80" height="160"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="160" id="0OV-25-XDW"/>
                                             <constraint firstAttribute="width" constant="80" id="L04-VO-mp2"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <state key="normal" title="0">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="tappedButton0:" destination="2d7-pR-XDl" eventType="touchUpInside" id="Zaq-Wj-cnS"/>
+                                            <action selector="tappedButton0:" destination="2d7-pR-XDl" eventType="touchUpInside" id="rS8-aW-G3K"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZMD-0I-Sa9">
@@ -89,7 +89,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Hy-2W-iGv">
-                                        <rect key="frame" x="65" y="210" width="30" height="120"/>
+                                        <rect key="frame" x="60" y="210" width="30" height="120"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="120" id="vtO-Tg-paB"/>
                                             <constraint firstAttribute="width" constant="30" id="xnb-Ro-u17"/>
@@ -100,7 +100,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXm-E2-Af6">
-                                        <rect key="frame" x="340" y="435" width="70" height="25"/>
+                                        <rect key="frame" x="340" y="445" width="70" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="gJm-Rr-wiI"/>
                                             <constraint firstAttribute="height" constant="25" id="wSK-Ml-okM"/>
@@ -155,7 +155,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S3I-xg-Zm8">
-                                        <rect key="frame" x="102" y="469" width="25" height="100"/>
+                                        <rect key="frame" x="100" y="469" width="25" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="pTn-JP-PCe"/>
                                             <constraint firstAttribute="width" constant="25" id="qxp-Uz-Hs9"/>
@@ -166,7 +166,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dS0-eL-CzM">
-                                        <rect key="frame" x="62" y="469" width="25" height="100"/>
+                                        <rect key="frame" x="60" y="469" width="25" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="hPA-6L-hI5"/>
                                             <constraint firstAttribute="width" constant="25" id="jkZ-dC-91P"/>
@@ -179,21 +179,20 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="8Pm-9q-DuP" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="435" id="4Yh-Mm-vSL"/>
+                                    <constraint firstItem="8Pm-9q-DuP" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="445" id="4Yh-Mm-vSL"/>
                                     <constraint firstItem="Y0R-Hv-ezw" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="310" id="5mK-UU-50R"/>
                                     <constraint firstItem="Y0R-Hv-ezw" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="170" id="7ZP-sT-ehK"/>
                                     <constraint firstAttribute="trailing" secondItem="41Z-Jy-hq9" secondAttribute="trailing" constant="55" id="81m-Oe-VcV"/>
                                     <constraint firstItem="J3e-LV-dNp" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="43" id="9HO-g6-bFM"/>
-                                    <constraint firstItem="8Hy-2W-iGv" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="65" id="AhZ-GQ-nOq"/>
+                                    <constraint firstItem="8Hy-2W-iGv" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="60" id="AhZ-GQ-nOq"/>
                                     <constraint firstItem="kdP-KV-ZRI" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="120" id="GEI-og-g6g"/>
                                     <constraint firstItem="S3I-xg-Zm8" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="469" id="Gaw-9Y-TqV"/>
                                     <constraint firstItem="41Z-Jy-hq9" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="469" id="Hcj-Nf-bfu"/>
                                     <constraint firstItem="xmX-RV-QIf" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="369" id="Q22-Oe-C9G"/>
                                     <constraint firstAttribute="trailing" secondItem="gKi-Vw-ggg" secondAttribute="trailing" id="QLx-EC-9ix"/>
-                                    <constraint firstItem="gKi-Vw-ggg" firstAttribute="centerY" secondItem="y6M-4j-zgz" secondAttribute="centerY" id="ThJ-Xe-9FU"/>
+                                    <constraint firstItem="gKi-Vw-ggg" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="210" id="VHH-dH-u3Z"/>
                                     <constraint firstItem="kdP-KV-ZRI" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="210" id="VQE-YA-ZLc"/>
-                                    <constraint firstItem="dS0-eL-CzM" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="62" id="VlT-wx-gNj"/>
-                                    <constraint firstItem="gKi-Vw-ggg" firstAttribute="centerX" secondItem="y6M-4j-zgz" secondAttribute="centerX" id="WE2-jv-FpL"/>
+                                    <constraint firstItem="dS0-eL-CzM" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="60" id="VlT-wx-gNj"/>
                                     <constraint firstItem="ZMD-0I-Sa9" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="270" id="XHD-Hy-vsn"/>
                                     <constraint firstItem="xmX-RV-QIf" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="308" id="aRO-eT-oPt"/>
                                     <constraint firstItem="YXm-E2-Af6" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="340" id="bEy-Z9-szK"/>
@@ -205,9 +204,10 @@
                                     <constraint firstItem="Xt7-sU-hwa" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="320" id="k3e-Cp-xGU"/>
                                     <constraint firstItem="8Pm-9q-DuP" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" constant="12" id="kMz-SM-TE5"/>
                                     <constraint firstItem="S3I-xg-Zm8" firstAttribute="leading" secondItem="dS0-eL-CzM" secondAttribute="trailing" constant="15" id="lVh-Sn-dbj"/>
+                                    <constraint firstItem="gKi-Vw-ggg" firstAttribute="centerX" secondItem="y6M-4j-zgz" secondAttribute="centerX" id="o5L-iW-Gzs"/>
                                     <constraint firstItem="8Hy-2W-iGv" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="210" id="pjP-WY-Isy"/>
                                     <constraint firstItem="41Z-Jy-hq9" firstAttribute="leading" secondItem="ISN-gu-2Cp" secondAttribute="trailing" constant="20" id="qdt-Tk-6Ma"/>
-                                    <constraint firstItem="YXm-E2-Af6" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="435" id="tad-LK-Vn1"/>
+                                    <constraint firstItem="YXm-E2-Af6" firstAttribute="top" secondItem="y6M-4j-zgz" secondAttribute="top" constant="445" id="tad-LK-Vn1"/>
                                     <constraint firstItem="gKi-Vw-ggg" firstAttribute="leading" secondItem="y6M-4j-zgz" secondAttribute="leading" id="yjS-sY-jcQ"/>
                                 </constraints>
                             </view>
@@ -256,7 +256,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMM-1C-A2b">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMM-1C-A2b">
                                         <rect key="frame" x="50" y="474" width="314" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="gCT-hW-ofo"/>
@@ -299,7 +299,7 @@
                                     <constraint firstItem="XMM-1C-A2b" firstAttribute="top" secondItem="UHb-JL-WLB" secondAttribute="bottom" constant="10" id="eFd-BP-3nC"/>
                                     <constraint firstItem="UHb-JL-WLB" firstAttribute="top" secondItem="jIa-GR-khA" secondAttribute="top" constant="110" id="iga-F9-IlD"/>
                                     <constraint firstItem="VDN-ag-mtn" firstAttribute="leading" secondItem="jIa-GR-khA" secondAttribute="leading" constant="50" id="m7E-b0-aED"/>
-                                    <constraint firstAttribute="trailing" secondItem="XMM-1C-A2b" secondAttribute="trailing" constant="50" id="nzC-xo-5pQ"/>
+                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="XMM-1C-A2b" secondAttribute="trailing" constant="50" id="nzC-xo-5pQ"/>
                                     <constraint firstItem="UHb-JL-WLB" firstAttribute="leading" secondItem="jIa-GR-khA" secondAttribute="leading" constant="30" id="tYq-8W-F3F"/>
                                 </constraints>
                             </view>
